Fix onboarding modal overflow

--- a/src/components/onboarding/OnBoardingModal/OnBoardingModal.module.sass
+++ b/src/components/onboarding/OnBoardingModal/OnBoardingModal.module.sass
@@ -15,7 +15,7 @@
     border-radius: $space_normal
 
     :global(.ant-modal-body)
-      max-height: none
+      max-height: 70vh
       height: 100%
       display: flex
       flex-direction: column
@@ -32,7 +32,7 @@
 .DfOnboardingSignerModal
   @extends .DfOnBoardingModal
   :global(.ant-modal-body)
-    min-height: 596px
+    min-height: 300px
 
 .Title
   font-weight: bold
